# Base_Python

./: .gitignore  README.md  digest.txt
file_org_old/: README.md  (+1 more)
file_organizer/: MANIFEST.in  README.md  pyproject.toml  setup.py
file_organizer/organizer/: README.md  __init__.py  __main__.py  bootstrap.py  cli.py  core.py  logger.py  rules.py
file_organizer/organizer/application/: __init__.py
file_organizer/organizer/application/dto/: __init__.py  organize_request.py  organize_result.py
file_organizer/organizer/configs/: __init__.py  config.py  default_configs.json  default_rules.json  default_styles.json
file_organizer/organizer/data/: config.json  rules.json  styles.json
file_organizer/organizer/domain/: __init__.py  style_set.py
file_organizer/organizer/exceptions/: __init__.py  base.py  config.py  logging.py  rule.py
file_organizer/organizer/infrastructure/: __init__.py
file_organizer/organizer/logger/: __init__.py  log_manager.py
file_organizer/organizer/loggers/: __init__.py  log_configurer.py  log_manager.py  logger.py  loguru_log.py  standard.py  style_loader.py
file_organizer/organizer/src/: __init__.py  cli.py  config_manager.py  configs.py  core.py  exceptions.py  rule_manager.py  rules.py  runner.py  validator.py
file_organizer/organizer/tests/: test_bootstrap.py  test_filesystem.py  test_rules.py  test_styles.py  test_use_case.py
file_organizer/organizer/tools/: __init__.py  loader.py  normalizer.py
file_organizer/tests/: test_bootstrap.py  test_file_system.py  test_logger.py  test_rules.py  test_styles.py  test_use_case.py
(+156 files in other folders)
