[project]
name = "file-organizer"
version = "0.1.0"
description = "Organize files into folders based on configurable rules"
authors = [
    {name = "Umidjon Khodjaev", email = "iexistedonlyforyou@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "loguru>=0.7.0",
]

[tool.poetry]
packages = [{include = "organizer"}]
include = ["organizer/data/*.json"]

[project.scripts]
organizer = "organizer.interfaces.cli.main:main"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0"
pytest-mock = ">=3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"